[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "xrd_simulator"
version = "0.5"
description = "Tools for diffraction simulation of s3dxrd and powder type experiments."
readme = "README.rst"
license = {text = "MIT"}
authors = [
    {name = "Axel Henningsson", email = "nilsaxelhenningsson@gmail.com"},
    {name = "Marc Raventós", email = "marcraven@gmail.com"},
]
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    # Core numeric/scientific
    "numpy>=1.24.0",
    "scipy>=1.11.0",
    "pandas>=2.0.0",

    # Deep learning - install separately with CUDA support:
    # pip install torch --index-url https://download.pytorch.org/whl/cu126
    "torch>=2.5.0",

    # Mesh generation and processing
    "meshpy",
    "meshio",

    # Visualization
    "matplotlib",
    "Pillow>=9.0.0",
    "scikit-image",

    # Scientific computing
    "numba",
    "psutil",
    "xfab",

    # I/O and serialization
    "pycifrw",
    "dill",
    "netcdf4",
    "h5py",
    "tifffile",

    # Type hints
    "typing-extensions>=4.9.0",

    # Azimuthal integration
    "pyFAI",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "coverage",
]
docs = [
    "sphinx",
    "sphinx-rtd-theme",
]

[project.urls]
Homepage = "https://github.com/fable-3dxrd/xrd_simulator"
Documentation = "https://fable-3dxrd.github.io/xrd_simulator/"
Repository = "https://github.com/fable-3dxrd/xrd_simulator"

[tool.setuptools.packages.find]
where = ["."]
include = ["xrd_simulator*"]