[metadata]
name = xrd_simulator
version = 0.4.1
author = Axel Henningsson
author_email = nilsaxelhenningsson@gmail.com
description = Tools for diffraction simulation of s3dxrd type experiments.
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/fable-3dxrd/xrd_simulator
project_urls =
    Documentation = https://fable-3dxrd.github.io/xrd_simulator/
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.8,<3.11
